[package]
name = "support_backend"
version = "0.1.0"
authors = ["charles"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
chrono = { version = "0", features = ["serde"] }
sqlx = { version = "0.4.0-beta.1", features = ["sqlite", "chrono"] }
anyhow = "1"
